@@ -1,3 +1,8 @@
+2009-07-13  Giulio Eulisse <giulio.eulisse@cern.ch>
+	
+	* IgProfAnalyse.cc: more resilient option handling and
+	  improved usage message.
+
 2009-07-07  Giulio Eulisse <giulio.eulisse@cern.ch>
 
 	* IgProfAnalyse.cc: tree like report format which shows
